--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-.cityName, .tempText {
+.cityName, .tempText, .status {
     text-align: center;
     font-size: 35px;
 }
